dark mode: height problem solved, efficient submit in console

--- a/src/pages/form/form.scss
+++ b/src/pages/form/form.scss
@@ -4,6 +4,9 @@
   }
   .fileUpload {
     margin-top: 10px;
+    label {
+      max-width: 85px;
+    }
   }
   .uploadIcon {
     cursor: pointer;
